<resources>
    <string name="app_name">RecipeApp</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_menu">Menu</string>
    <string name="title_notifications">Notifications</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_submit">Submit</string>
    <string name="action_save">Save</string>
    <string name="action_save_changes">Save Changes</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_back">Back</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title">"Recipe App"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>